RESOLVED FIXED186187
[WebGL] GL_EXT_robustness utilization should depend on CONTEXT_ROBUST_ACCESS value
https://bugs.webkit.org/show_bug.cgi?id=186187
Summary [WebGL] GL_EXT_robustness utilization should depend on CONTEXT_ROBUST_ACCESS ...
Zan Dobersek
Reported 2018-06-01 00:25:57 PDT
[WebGL] GL_EXT_robustness utilization should depend on CONTEXT_ROBUST_ACCESS value
Attachments
Patch (5.04 KB, patch)
2018-06-01 00:47 PDT, Zan Dobersek
no flags
Archive of layout-test-results from ews202 for win-future (12.82 MB, application/zip)
2018-06-01 10:01 PDT, EWS Watchlist
no flags
Zan Dobersek
Comment 1 2018-06-01 00:47:05 PDT
EWS Watchlist
Comment 2 2018-06-01 00:49:36 PDT
Attachment 341742 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/Extensions3D.h:112: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 3 2018-06-01 10:01:11 PDT
Comment on attachment 341742 [details] Patch Attachment 341742 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7925716 New failing tests: http/tests/security/local-video-source-from-remote.html
EWS Watchlist
Comment 4 2018-06-01 10:01:26 PDT
Created attachment 341766 [details] Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Carlos Bentzen
Comment 5 2018-06-02 07:02:38 PDT
I think this solves bug 184576 as well?
Zan Dobersek
Comment 6 2018-06-03 10:24:38 PDT
(In reply to Carlos Eduardo Ramalho from comment #5) > I think this solves bug 184576 as well? Yes, that's what this should be fixing.
Zan Dobersek
Comment 7 2018-06-03 10:24:45 PDT
*** Bug 184576 has been marked as a duplicate of this bug. ***
Zan Dobersek
Comment 8 2018-06-03 10:35:44 PDT
Comment on attachment 341742 [details] Patch Clearing flags on attachment: 341742 Committed r232450: <https://trac.webkit.org/changeset/232450>
Zan Dobersek
Comment 9 2018-06-03 10:35:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2018-06-03 10:38:08 PDT
Note You need to log in before you can comment on or make changes to this bug.